--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,3 +51,12 @@
 	margin: 8px auto;
 
 }
+
+.fert-result-div-main
+{	
+	display:  table-footer-group;
+	background-color: lightpink;
+	height: 100%;
+	width: 500px;
+	text-align: center;
+}
