--- a/templates/crop_pred.html
+++ b/templates/crop_pred.html
@@ -1,3 +1,4 @@
+{% extends 'layout.html' %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,7 +6,8 @@
 </head>
 <body>
 
-	<font></font>
+{% block body %}
 
+{% endblock %}
 </body>
 </html>
