--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,8 +5,8 @@
 	<title>PlotLy dash Viz</title>
 </head>
 <body>
-
-	<iframe id="dash-container" src="http://localhost:8050", width="100%", height="800px">
-		
+	{% block body %}
+	{{graph}}
+	{% endblock %}
 </body>
 </html>
