--- a/templates/fertilizer.html
+++ b/templates/fertilizer.html
@@ -29,7 +29,7 @@
 					</div>
 					<div class="form-group">
 						<label for="pH">Enter the pH value:</label>
-						<input class="form-control" type="number" id="pH" name="pH-value"  placeholder="Example 5.5" />
+						<input class="form-control" type="float" id="pH" name="pH-value"  placeholder="Example 5.5" />
 					</div>
 					<div id="submit-fert-div">
 						<input type="submit" name="submit" class="btn btn-primary" id="submit-fert">
