--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,13 +10,13 @@
 		<div class="nav navbar-nav">
 			<ul class="nav navbar-nav ms-auto">
 				<li class="nav-item">
-					<a href="#" class="nav-link">Home</a>
+					<a href="{{url_for('index')}}" class="nav-link">Home</a>
 				</li>
 				<li class="nav-item">
 					<a href="{{url_for('dashboard')}}" class="nav-link">Dashboard</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link">Crop Prediction</a>
+					<a href="{{ url_for('crop_pred')}}" class="nav-link">Crop Prediction</a>
 				</li>
 				<li class="nav-item">
 					<a href="{{ url_for('fertilizer' )}}" class="nav-link">Fertilizer Predction</a>
