--- a/templates/crop_pred.html
+++ b/templates/crop_pred.html
@@ -6,8 +6,25 @@
 </head>
 <body>
 
-{% block body %}
-
-{% endblock %}
+	{% block body %}
+	<div id="crop-main-div">
+		<div class="container-fluid" id="crop-form-div">
+			<h3 id="crop-head">Majortity Crop</h3>
+			<form action="{{ url_for('crop_process') }}" method="POST">
+				<div class="form-group">
+					<label for="state-name">State Name</label>
+					<input class="form-control" type="text" placeholder="Maharashtra" id="state-name" name='state-name' />
+				</div>
+				<div class="form-group">
+					<label for="district-name">District Name</label>
+					<input class="form-control" type="text" placeholder="Kolhapur" id="district-name" name='district-name' />
+				</div>
+				<div id="submit-crop-div">
+					<input type="submit" name="submit" class="btn btn-primary" id="submit-crop"/>
+				</div>   
+			</form>
+		</div>	 
+	</div>
+	{% endblock %}
 </body>
 </html>
