Done With Crop list. Crop Prediction next

--- a/templates/crop_pred.html
+++ b/templates/crop_pred.html
@@ -25,6 +25,14 @@
 			</form>
 		</div>	 
 	</div>
+	<div id="crop_list_div">
+		<table>
+			<tr>
+				<th>Crop</th>
+			</tr>
+		</table>
+		{{data}}
+	</div>
 	{% endblock %}
 </body>
 </html>
