--- a/templates/crop_results.html
+++ b/templates/crop_results.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 	{% block body %}
-	<p>{{data}}</p>
-	{% endblock %}
+	{{data}}
+	<!-- {% for i in data %}
+
+	{% endfor %}
+
+ -->	{% endblock %}
 </body>
 </html>
