--- a/templates/crop_results.html
+++ b/templates/crop_results.html
@@ -6,29 +6,30 @@
 </head>
 <body>
 	{% block body %}
+	{% if data["prediction"]|length == 0%}
 	<div id="crop_list_div">
-		<table class="table table-striped" id="table_for_crop_list">
+		<p> The majority crops grown in your region are</p> 
+		<table>
 			<thead>
 				<tr>
-					<th scope="col">Crop</th>
+						{% for i in data["data_for_crops_list"] %}
+					<th>
+						{{i}}
+					</th>
+						{% endfor %}
 				</tr>
 			</thead>
-			<tbody>
-				{% for crop in data["data_for_crops_list"] %}
-				<tr>
-					<td>{{crop}}</td>
-				</tr>
-				{% endfor %}
-			</tbody>
 		</table>
 	</div>
-
+	{% endif %}
+<br>
+<br>
 	<div id="crop-prediction">
 		<h3>The Crop That You Can grow on your soil is: </h3>
 		{% if data["prediction"]|length == 0 %}
 
 			<P><h4>The values entered are not suitable for any crop in this region.</h4></P>
-			<<P><h4>Please Procced to this page for more information on fertilizers to grow a particular crop.</h4></P>
+			<P><h4>Please Procced to this page for more information on fertilizers to grow a particular crop.</h4></P>
 
 		{% else %}
 
@@ -46,3 +47,19 @@
 	{% endblock %}
 </body>
 </html>
+<!-- 	<table class="table table-striped" id="table_for_crop_list">
+			<thead>
+				<tr>
+					<th scope="col">Crop</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for crop in data["data_for_crops_list"] %}
+				<tr>
+					<td>{{crop}}</td>
+				</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+
+ -->	
