--- a/templates/index.html
+++ b/templates/index.html
@@ -16,29 +16,69 @@
 		</div>
 	</div>
 
-	<div class="container-fluid">
-		<div class="about-us-div">
-			<div class="row">
-				<div class="col-lg-6">
-					<p><h3>About Us...</h3></p>
-					<div>
-						Smart Farming is an ML based application that
-						can answer a lot of questions about farming and prodction
-						that has been done in the years before 2020. We answer questions based on fertilizer selection and preparation.
-						Crop prediction is done on the basis on where you are and 
-						what region your in.
+	<div class="container-fluid">  
+		<div class="row">
+			<div class="col-md-4" id="card-div">
+				<div class="card">
+					<img src="static/images/14.jpg" class="card-img-top" alt="...">
+					<div class="card-body">
+						<a href="{{ url_for('dashboard') }}"><h4>Dashboard</h4></a>
+						<p class="card-text">Interactive Vizualtization of different aspects involved in Agricultrcal sector of India.</p>
 					</div>
 				</div>
-				<div class="col-lg-6">
-					
+			</div>
+			<div class="col-md-4" id="card-div">
+				<div class="card">
+					<img src="static/images/4.jpg" class="card-img-top" alt="...">
+					<div class="card-body">
+						<a href="{{ url_for('crop_pred') }}"><h4>Crop Prediction</h4></a>
+						<p class="card-text">Prediction of crop that will give the best yeild based on the composition of your soil.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4" id="card-div"> 
+				<div class="card">
+					<img src="static/images/10.jpg" class="card-img-top" alt="...">
+					<div class="card-body">
+						<a href="{{ url_for('fertilizer') }}"><h4>Fertilizer Solutions</h4></a>
+						<p class="card-text">Fertilizer solutions based on the type of crop that you wish to grow in your region.</p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	<br>
+	<hr>
+	<br>
+	<div class="container-fluid">
+		<div class="row" id="about-us-img">
+			<div>
+					<p><h3>About Us...</h3></p>
+					<div id="about-us-div">
+						Smart Farming is an ML based application that
+						can answer a lot of questions about farming and the crop production that has been done in the years before 2020. 
+						We answer questions based on fertilizer selection and preparation.
+						Crop prediction is done on the basis on where you are and 
+						what region you are in.
 
-	{% endblock %}
+						We serve to provide an easy and data based aproach to farming or like our name smart farming.
+						A person can come to know the major crops grown in the region and overall production of those crops.
+					</div>
+				</div>
+				<!-- <div class="col-lg-6">
+					<div class="card">
+						<img src="static/images/5.jpg" class="card-img-top-1" alt="...">
+					</div>
+				</div> -->
+			</div>
+		</div>
+	</div>
+</div>
+</div>
 
-	
+{% endblock %}
+
+
 
 </body>
 </html>
