--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css')}}">
 
 </head>
-<body style="background-color:lightcyan;">
+<body class="body">
 	<nav class="navbar navbar-expand-lg navbar bg-dark dark sticky-top">
 		<div class="nav navbar-nav">
 			<ul class="nav navbar-nav ms-auto">
@@ -39,7 +39,26 @@
 
 	{% endblock %}
 	<!-- Footer -->
-	
+	<footer class="text-center" id="footer">
+		<!-- Grid container -->
+		<div class="container p-4">
+			<!--Grid row-->
+			<div class="row">
+				<div id="footer-text">
+					<h4>Smart Farming</h4>
+					<p>Made for Eductational Purposes Only.</p>
+				</div>
+			</div>
+			<!--Grid row-->
+		</div>
+		<!-- Grid container -->
+
+		<!-- Copyright -->
+		<div class="text-center p-3">
+			© 2021 Copyright: smartfarming@gmail.com
+		</div>
+		<!-- Copyright -->
+	</footer>
 	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
