--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,7 +91,7 @@
 
 .fert-result-div-main
 {	
-	display:  table-footer-group;
+	display:  contents;
 	height: 100%;
 	width: 500px;
 	text-align: center;
